--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,11 @@
         android:layout_height="wrap_content"
         android:text="Update"
         android:id="@+id/btnUpdate"/>
+    <Button
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        android:id="@+id/btnCreate"/>
 
 </LinearLayout>
